		Added HitAnimPalette trait for LaserZap projectiles. Laser hit animations can now specify individual palettes. Defaults to effect palette.
		Added RenderNameTag trait to show the player's name above an actor.
		Fixed performance issues with units pathing to naval transports.
		Fixed unit moving to transports that have moved.
		Updated shroud-based traits to use world units.
		Renamed AttackTesla into AttackCharge and un-hardcoded initial charge delay and delay for additional charges.
		Updated RenderBuildingCharge so you can set a custom charge sequence name (default is active).
		Added IEffectiveOwner interface for traits/logic that temporarily alter an actor's apparent owner.
		Renamed Spy trait to Disguise, SpyToolTip trait to DisguiseToolTip, and RenderSpy trait to RenderDisguise.
		Overhauled the internal map management and preview generation code.
		Muzzleflash definitions have moved from WithMuzzleFlash to each Armament. Only one WithMuzzleFlash is now required per actor.
		Added an AttackGarrisoned trait that allows passengers to fire through a set of defined ports.
		Maps can define initial cargo for actors by adding "Cargo: actora, actorb, ..." to the actor reference.
		Modified Teleport activity to use the best/closest open cell to the target destination for teleports (for ChronoshiftPower this only applies on the return trip).
		Renamed ChronoshiftDeploy trait to PortableChrono.
		Added LineBuildNode trait to filter which structure(s) a LineBuild actor can be attached to.
		Updated to SDL 2.0.3 under OSX, which improves platform integration.
	Server:
		Message of the day is now shared between all mods and a default motd.txt gets created in the user directory.
	Asset Browser:
		Filenames are now listed in alphabetical order
	Map Editor:
		Removed legacy INI/MPR map import.
		Fixed being unable to use the flood fill tool on similar grass/snow/desert tiles.
	Utility:
		Added an improved INI/MPR map import.