@@ -1,6 +1,6 @@
 #region Copyright & License Information
 /*
- * Copyright 2007-2011 The OpenRA Developers (see AUTHORS)
+ * Copyright 2007-2014 The OpenRA Developers (see AUTHORS)
  * This file is part of OpenRA, which is free software. It is made
  * available to you under the terms of the GNU General Public License
  * as published by the Free Software Foundation. For more information,
@@ -19,10 +19,11 @@ namespace OpenRA.Mods.RA.Render
 	{
 		public void Killed(Actor self, AttackInfo e)
 		{
+			//TODO: Make palette for this customizable as well
 			var bi = self.Info.Traits.Get<BuildingInfo>();
 			FootprintUtils.UnpathableTiles(self.Info.Name, bi, self.Location).Do(
 				t => self.World.AddFrameEndTask(
-					w => w.Add(new Explosion(w, t.CenterPosition, "building"))));
+					w => w.Add(new Explosion(w, t.CenterPosition, "building", "effect"))));
 		}
 	}
 }
